main.css
* {
    margin: 0px;
    padding: 0px;
}
html, body {
    font-family: 'Open Sans', sans-serif;
}


h1 {
    font-family: 'Mukta', sans-serif;
    font-size: 62px;
    color: white;
    letter-spacing: 15px;
    text-align: center;
}
h2 {
    font-family: 'Mukta', sans-serif;
    font-size: 32px;
    font-weight: bold;
    color: black;
    letter-spacing: 5px;
    text-align: center;
}
h3 {
    font-family: 'Mukta', sans-serif;
    font-size: 17px;
    font-weight: bold;
    color: black;
    letter-spacing: 1.5px;
}
p {
    color: black;
    font-weight: 100;
    letter-spacing: 1px;
    font-size: 14px;
    line-height: 2em;
}

nav {
    padding: 0% 13%;
}
nav ul {
    text-align: right;
    width: 100%;
}
nav ul li {
    display: inline-block;
    margin: 10px 30px;
}
nav ul li a {
    color: black;
    text-decoration: none;
    font-weight: bold;
    font-family: 'Mukta', sans-serif;
    font-size: 16px;
}
nav ul li a:hover {
    color: #7a7a7a;
}

.horiz-line {
    margin: 0% 13%;
}

.welcome-page {
    max-width: 100vw;
    height: 650px;
    padding: 0% 13%;
    display: flex;
    justify-content: center;
    align-items: center;
    
    background-image: url("https://www.fasken.com/-/media/29b8b6a371344d40a392350b395691d6.ashx");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.about-page {
    max-width: 100vw;
    padding: 0 27%;
    display: flex;
    justify-content: center;
    align-items: center;
    
    background-image: url("https://www.wallpaperflare.com/static/542/50/545/simple-background-blue-simple-minimalism-wallpaper.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
.about-content {
    margin: 13% 0;
}
.about-content h2{
    color: white;
    margin-bottom: 25px;
}
.about-content p{
    color: white;
}
.profile-img {
    float: left;
    width: 280px;
    margin: 0px 30px 25px 0px;
}

.skills-page {
    max-width: 100vw;
    padding: 0 13%;
    display: flex;
    justify-content: center;
    align-items: center;
    
    background-color: white;
}
.skills-content{
    margin: 8% 0;
    text-align: center;
}
.skills-grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    text-align: left;
}
.skill-type {
    padding: 30px 30px;
}
.skill-button {
    font-size: 16px;
    font-family: 'Mukta', sans-serif;
    background-color: white;
    padding: 4px 10px;
    margin-top: 10px;
    border: 1px solid black;
    outline: none;
}
.skill-button:hover {
    color: #7a7a7a;
    border-color: #7a7a7a;
}

.experience-page {
    max-width: 100vw;
    padding: 0 13%;
    display: flex;
    justify-content: center;
    align-items: center;
    
    background-color: white;
}
.experience-content{
    margin: 8% 0;
}
.experience-type {
    display: grid;
    grid-template-columns: 400px; 2fr;
    padding: 20px;
    align-items: center;
}
.experience-type img {
    width: 330px;
    grid-column: 1;
}
.experience-description{
    grid-column: 2;
}

.achievements-page {
    max-width: 100vw;
    padding: 0 13%;
    display: flex;
    justify-content: center;
    align-items: center;
    
    background-color: white;
}
.achievements-content{
    margin: 8% 0px;
}
.achievements-grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
}
.achievement-type {
    padding: 30px 30px;
}

.contact-page {
    max-width: 100vw;
    padding: 0 13%;
    display: flex;
    justify-content: center;
    align-items: center;
    
    background-color: white;
}
.contact-content{
    margin: 2% 0px;
}
.contact-grid {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
}
.contact-type {
    padding: 20px 50px;
}
.contact-type img {
    width: 70px;
}

/* Media Queries for responsive design */
/* These queries meant for resized desktop screens, since desktops have an accurate pointer device, 'fine' can be used */
@media screen and (max-width: 970px) and (pointer: fine){ /* Resize navbar, bring all in-line images above text */
    nav ul li {
        margin: 10px 15px;
    }
    nav ul li a {
        font-size: 15px;
    }
    
    .profile-img {
        float: none;
        display: block;
        margin: 0 auto 20px auto;
    }
    
    .experience-type {
        display:block;
        grid-template-columns: none;
        padding: 20px;
    }
    .experience-type img {
        width: 330px;
        grid-column: none;
    }
    .experience-description{
        grid-column: none;
    }
}

@media screen and (max-width: 735px) and (pointer: fine){ /* Navbar disappears, h1 gets smaller, bring all content in one column, connect icons get smaller */
    nav {
        display: none;
    }
    
    h1 {
        font-size: 40px;
        letter-spacing: 8px;
    }
    
    .skills-grid {
        display: block;
        grid-template-columns: none;
        text-align: left;
    }
    .skill-type {
        padding: 17px 0px;
    }
    
    .achievements-content{
        margin: 8% 0px;
    }
    .achievements-grid {
        display: block;
        grid-template-columns: none;
    }
    .achievement-type {
        padding: 17px 0px;
    }
    
    .contact-type {
        padding: 15px 25px;
    }
    .contact-type img {
        width: 48px;
    }
}

/* Meant for mobile screens, as they do not have an accurate pointing device (coarse) */
@media (pointer: coarse){
    h2 {
        font-size: 15px;
        letter-spacing: 1.5px;
    }
    h3 {
        font-size: 11px;
        letter-spacing: 1px;
    }
    p {
        letter-spacing: 1px;
        font-size: 9px;
        line-height: 0.8em;
    }
    
    nav {
        display: none;
    }
    
    h1 {
        font-size: 70px;
        letter-spacing: 8px;
    }
    
    .profile-img {
        float: none;
        display: block;
        width: 50vw;
        margin: 0 auto 20px auto;
    }
    
    .skills-grid {
        display: block;
        grid-template-columns: none;
        text-align: left;
    }
    .skill-type {
        padding: 17px 0px;
    }
    .skill-button {
        font-size: 40px;
        padding: 4px 10px;
        margin-top: 10px;
    }
    
    .experience-type {
        display:block;
        grid-template-columns: none;
        padding: 20px;
    }
    .experience-type img {
        width: 50vw;
        grid-column: none;
    }
    .experience-description{
        grid-column: none;
    }
    
    .achievements-content{
        margin: 8% 0px;
    }
    .achievements-grid {
        display: block;
        grid-template-columns: none;
    }
    .achievement-type {
        padding: 17px 0px;
    }
    
    .contact-type {
        padding: 15px 25px;
    }
    .contact-type img {
        width: 100px;
    }
}

